--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  equatable: ^2.0.5
+  http: ^1.1.0
 
 dev_dependencies:
   lints: ^2.0.0
