--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tidal
-description: A starting point for Dart libraries or applications.
+description: A Dart library for connecting to and interacting with the Tidal Developer Portal APIs.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
